[metadata]
name = SleepDungeon
version = 1.0
description = A simple dungeon game, the result of a game jam at the TU Dresden
author = Lars Westermann, Martin Öhme, Robert Ludwig, Robert Ufer, Karsten Lehmann
author_email = mail@kalehmann.de
license = ~
url = -
long_description = A simple dungeon game, the result of a game jam at the TU Dresden

[options]
zip_safe = False
include_package_data = True
packages =
	sleepdungeon
install_requires =
	pygame
